--- a/about.html
+++ b/about.html
@@ -79,11 +79,11 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
                     <h2>Our Story</h2>
-                    <p>Founded in 2015, TechElite started with a simple mission: to make high-quality IT services and web design accessible to businesses of all sizes. What began as a small team of passionate developers and designers has grown into a trusted partner for over 500 businesses worldwide.</p>
+                    <p>Founded in 2022, MasterClass started with a simple mission: to make high-quality IT services and web design accessible to businesses of all sizes. What began as a small team of passionate developers and designers has grown into a trusted partner for over 500 businesses worldwide.</p>
                     <p>We believe in the power of technology to transform businesses. From startups to established enterprises, we've helped our clients overcome technical challenges, build stunning digital experiences, and achieve their business goals.</p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="https://via.placeholder.com/500x400?text=Our+Team+at+Work" alt="MasterClass Team" class="img-fluid rounded shadow">
+                    <img src="./img/WhatsApp Image 2025-12-04 at 15.16.59_3c65cf76.jpg" alt="MasterClass Team" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -126,10 +126,10 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="team-member">
-                        <img src="https://via.placeholder.com/300x300?text=John+Doe" alt="John Doe" class="img-fluid rounded mb-3">
-                        <h5>John Doe</h5>
+                        <img src="./img/jgguiiui.jpg" alt="John Doe" class="img-fluid rounded mb-3">
+                        <h5>Rubin Cibumbiro</h5>
                         <p class="text-muted">Founder & Lead Developer</p>
-                        <p>10+ years of experience in web development and IT infrastructure.</p>
+                        <p>7+ years of experience in web development and IT infrastructure.</p>
                         <div class="social-links">
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -138,8 +138,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="team-member">
-                        <img src="https://via.placeholder.com/300x300?text=Sarah+Smith" alt="Sarah Smith" class="img-fluid rounded mb-3">
-                        <h5>Sarah Smith</h5>
+                        <img src="./img/khiiiyi.jpg" alt="Sarah Smith" class="img-fluid rounded mb-3">
+                        <h5>Merci Mufungizi</h5>
                         <p class="text-muted">Creative Director</p>
                         <p>Award-winning designer with 8 years in branding and UI/UX design.</p>
                         <div class="social-links">
@@ -204,7 +204,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <p class="testimonial-text">"The website they built for us is beautiful and converts like a dream. Our sales have increased by 40% since launch!"</p>
-                        <p class="testimonial-author"><strong>- Maria Garcia</strong><br><span class="text-muted">Marketing Director, Fashion Boutique</span></p>
+                        <p class="testimonial-author"><strong>- Esther Nakhalali</strong><br><span class="text-muted">Marketing Director, Fashion Boutique</span></p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
@@ -217,7 +217,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <p class="testimonial-text">"Professional, creative, and detail-oriented. MasterClass's team delivered our branding project perfectly on time and budget."</p>
-                        <p class="testimonial-author"><strong>- James Wilson</strong><br><span class="text-muted">Founder, Creative Agency</span></p>
+                        <p class="testimonial-author"><strong>- John Uwase</strong><br><span class="text-muted">Founder, Creative Agency</span></p>
                     </div>
                 </div>
             </div>
