Add initial HTML and CSS files for the MasterClass project

--- a/blog.html
+++ b/blog.html
@@ -61,6 +61,7 @@
                     <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><button id="darkModeToggle" class="dark-mode-toggle" title="Dark Mode"><i class="fas fa-moon"></i></button></li>
                 </ul>
             </div>
         </div>
