--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,7 @@
                     </li>
                     <li class="nav-item"><a class="nav-link active" href="portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><button id="darkModeToggle" class="dark-mode-toggle" title="Dark Mode"><i class="fas fa-moon"></i></button></li>
                 </ul>
             </div>
         </div>
